fixed layout problems with mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,10 +30,11 @@ body {
   @include flex-center();
   font-family: $font;
   font-size: 15px;
+  
 }
 
-header, main, footer{
-    margin: 1rem;
+body, #two-sides > *{
+    margin-bottom: 2rem;
 }
 
 header{
@@ -50,13 +51,18 @@ header{
         margin: 0 .5rem;
     }
 }
-.rating{
+
+
+main {
+    @include flex-center();
+    .rating{
     width: 20rem;
     background-color: $Light_Grayish_Magenta;
     padding: 1rem;
     text-align: center;
     border-radius: .5rem;
     margin-bottom: 1rem;
+    }
 
     svg{
         margin: 0 0 .5rem .5rem;
@@ -65,6 +71,7 @@ header{
     strong{
         color: $Very_Dark_Magenta;
     }
+
 }
 
 
@@ -101,37 +108,11 @@ header{
     @content;
 }
 
+footer{
 .testimonials{
     background-color: $Very_Dark_Magenta;
     @include purple-cards();
     margin-bottom: 1rem;
 }
-
-@media (min-width: 500px){
-    body{
-        @include flex-center();
-        height: 100vh;
-    }
-    .top-side{
-    display: grid;
-    grid-template: auto 1fr auto / auto 1fr auto;
-    }
-
-  header {
-    grid-column: 1 / 2;
-    text-align: left;
-    // padding: 3rem;
-
-  }
-
- main {
-    grid-column: 2 / 4;
-    margin-right: 15rem;
-  }
-
-  footer {
-    grid-column: 1 / 4;
-    display: flex;
-    gap: 1rem;
 }
-}
+
